WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275144
Detached OffscreenCanvas should not transfer ImageBuffer
https://bugs.webkit.org/show_bug.cgi?id=275144
Summary
Detached OffscreenCanvas should not transfer ImageBuffer
Kimmo Kinnunen
Reported
2024-06-05 01:22:30 PDT
Detached OffscreenCanvas should not transfer ImageBuffer
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-05 01:22:47 PDT
<
rdar://problem/129270155
>
Kimmo Kinnunen
Comment 2
2024-06-05 01:27:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29534
EWS
Comment 3
2024-06-06 10:23:31 PDT
Committed
279775@main
(fa20ed6ab7ad): <
https://commits.webkit.org/279775@main
> Reviewed commits have been landed. Closing PR #29534 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug