Detached OffscreenCanvas should not transfer ImageBuffer https://bugs.webkit.org/show_bug.cgi?id=275144 rdar://129270155

Reviewed by Simon Fraser.

The buffer cannot contain anything, as only the context-less
OffscreenCanvases can be detached.

* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::SerializedScriptValue::computeMemoryCost const):
* Source/WebCore/html/OffscreenCanvas.cpp:
(WebCore::DetachedOffscreenCanvas::DetachedOffscreenCanvas):
(WebCore::OffscreenCanvas::create):
(WebCore::OffscreenCanvas::detach):
(WebCore::DetachedOffscreenCanvas::takeImageBuffer): Deleted.
(WebCore::OffscreenCanvas::takeImageBuffer const): Deleted.
* Source/WebCore/html/OffscreenCanvas.h:
(WebCore::DetachedOffscreenCanvas::originClean const):
(WebCore::DetachedOffscreenCanvas::memoryCost const): Deleted.

Canonical link: https://commits.webkit.org/279775@main